# 10ROSSample

./: CMakeLists.txt  README.md  package.xml
launch/: opencv_face_detection.launch
